test/Compiler/Parser/testcases/shouldfail/noWhere.expected
Left "Parse error at 3:1:
      |
    3 | main = undefined
      | ^^^^
    
    unexpected `main'" 